--- a/comic/package.json
+++ b/comic/package.json
@@ -14,5 +14,11 @@
     "next": "15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
+  },
+  "devDependencies": {
+    "@types/md5": "^2.3.5",
+    "@types/node": "22.13.10",
+    "@types/react": "19.0.10",
+    "typescript": "^5.8.2"
   }
 }
