--- a/comic/package.json
+++ b/comic/package.json
@@ -3,10 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "test": "jest"
   },
   "dependencies": {
     "axios": "^1.8.3",
@@ -16,9 +13,18 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/md5": "^2.3.5",
+    "@types/mocha": "^10.0.10",
     "@types/node": "22.13.10",
     "@types/react": "19.0.10",
+    "babel-jest": "^29.7.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "mocha": "^11.1.0",
     "typescript": "^5.8.2"
   }
 }
