--- a/comic/package.json
+++ b/comic/package.json
@@ -3,14 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "test": "jest"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.21",
     "axios": "^1.8.3",
     "md5": "^2.3.0",
     "next": "15.2.2",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^4.0.14"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
